Bug 167581 - Custom dynamic playlist isn't saved
Summary: Custom dynamic playlist isn't saved
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-28 12:50 UTC by Mikko C.
Modified: 2008-07-29 09:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikko C. 2008-07-28 12:50:55 UTC
Version:           2.0-SVN (using 4.1.60 (KDE 4.1.60 (KDE 4.2 >= 20080709)), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.26

Create a new Dynamic playlist, add some biases.
-Click save and choose a name for it.
-Repopulate the playlist with the new dynamic playlist.
-Exit amarok
-Reopen amarok: the custom playlist is gone.
Comment 1 Lydia Pintscher 2008-07-28 12:54:46 UTC
Saving of dynamic playlists is still work in progress right now.
Comment 2 Daniel Caleb Jones 2008-07-28 20:01:52 UTC
Can you do me a favor and post your '.kde/share/apps/amarok/dynamic.xml'?
Comment 3 Mikko C. 2008-07-28 20:04:30 UTC
That file seems to contain all the biases I chose, but the preset won't show up in amarok.
Anyway, here it is:

<biasedPlaylist title="No Hard Rock" >                     
<bias type="global" >                                      
<weight value="0" />                                       
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
</bias>                                                    
</biasedPlaylist>                                          
<biasedPlaylist title="No Rock-Metal" >                    
<bias type="global" >                                      
<weight value="0" />                                       
<query version="1.0" >                                     
<filters>                                                  
<include field="genre" value="Rock" />                     
</filters>                                                 
<returnValues>                                             
<track/>                                                   
</returnValues>                                            
<order value="random" />                                   
</query>                                                   
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
<query version="1.0" >                                     
<filters>                                                  
<include field="genre" value="Hard Rock" />                
</filters>                                                 
<returnValues>                                             
<track/>                                                   
</returnValues>                                            
<order value="random" />                                   
</query>                                                   
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
<query version="1.0" >                                     
<filters>                                                  
<include field="genre" value="Heavy Metal" />              
</filters>                                                 
<returnValues>                                             
<track/>                                                   
</returnValues>                                            
<order value="random" />                                   
</query>                                                   
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
<query version="1.0" >                                     
<filters>                                                  
<include field="genre" value="Rock &amp; Roll" />          
</filters>                                                 
<returnValues>                                             
<track/>                                                   
</returnValues>                                            
<order value="random" />                                   
</query>                                                   
</bias>                                                    
<bias type="global" >                                      
<weight value="0" />                                       
<query version="1.0" >                                     
<filters>                                                  
<include field="genre" value="Progressive Rock" />         
</filters>                                                 
<returnValues>                                             
<track/>                                                   
</returnValues>                                            
<order value="random" />                                   
</query>
</bias>
<bias type="global" >
<weight value="0" />
<query version="1.0" >
<filters>
<include field="genre" value="Progressive Metal" />
</filters>
<returnValues>
<track/>
</returnValues>
<order value="random" />
</query>
</bias>
<bias type="global" >
<weight value="0" />
<query version="1.0" >
<filters>
<include field="genre" value="Power Metal" />
</filters>
<returnValues>
<track/>
</returnValues>
<order value="random" />
</query>
</bias>
</biasedPlaylist>
Comment 4 Daniel Caleb Jones 2008-07-29 09:31:23 UTC
SVN commit 838988 by djones:

Fixed saving multiple dynamic playlists not working. (Xml changed a bit, so be sure to delete your dynamic.xml)
Make the remove button actually do something.
Various minor fixes.

BUG: 167581


 M  +6 -17     browsers/playlistbrowser/DynamicBiasWidgets.cpp  
 M  +4 -0      browsers/playlistbrowser/DynamicCategory.cpp  
 M  +81 -11    browsers/playlistbrowser/DynamicModel.cpp  
 M  +3 -2      browsers/playlistbrowser/DynamicModel.h  
 M  +1 -1      collection/support/XmlQueryReader.cpp  
 M  +2 -2      dynamic/BiasedPlaylist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=838988