Fixed saving multiple dynamic playlists not working. (Xml changed a bit, so be sure to delete your dynamic.xml) Make the remove button actually do something. Various minor fixes.

BUG: 167581

svn path=/trunk/extragear/multimedia/amarok/; revision=838988